[package]
name = "gelf_logger"
version = "0.2.0"
authors = ["OVH SAS <github@ovh.net>"]
edition = "2021"
license-file = "LICENSE"
description = "Minimal rust logger to send log entries in GELF."
keywords = ["serde", "logs", "GELF"]
readme = "README.md"
repository = "https://github.com/ovh/rust-gelf_logger"

[features]
ovh-ldp = ["serde_gelf/ovh-ldp"]
yaml = ["serde_yaml"]

[dependencies]
log = { version = "0.4", features = ["std"] }
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_gelf = "0.1"
serde_json = "1.0"
serde_yaml = { version = "0.8", optional = true }
